--- a/src/pages/RightPanel/RightPanel.module.scss
+++ b/src/pages/RightPanel/RightPanel.module.scss
@@ -25,3 +25,8 @@
   margin-right: .5rem;
   cursor: pointer;
 }
+
+#term {
+  width: 100%;
+  height: 100%;
+}
